--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This is a Java protoype for an application for an iPad-like device to enable people who are unable
-to speak to communicate using speech synthesis. As an initial step in the development process, a
-Java-based GUI is to be developed as a prototype for acquiring feedback from users and testing
-alternative user interface designs.
+This is a Java protoype for an application for an iPad-like device to enable people who are unable to speak to communicate using speech synthesis. As an initial step in the development process, a Java-based GUI is to be developed as a prototype for acquiring feedback from users and testing alternative user interface designs.
